--- a/src/app/core/presentation/admin/modules/empleado/empleado.component.scss
+++ b/src/app/core/presentation/admin/modules/empleado/empleado.component.scss
@@ -16,10 +16,19 @@ h4 {
   .busqueda {
     display: flex;
     flex-direction: column;
+    &__input {
+      width: 40%;
+    }
   }
   .acciones {
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+  .cabecera {
+    &__titulo {
+      font-size: 32px;
+      font-weight: 500;
+    }
   }
 }
