--- a/src/app/core/presentation/public/modules/home/home.component.html
+++ b/src/app/core/presentation/public/modules/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<div class="container">
+  <section class="left">
+    <h4 class="left__subtitulo">Corporación Quevedo Inmobiliaria & Constructora S.A.C</h4>
+    <h1 class="left__titulo">Encuentra el Lote que Buscas con Nosotros</h1>
+    <p class="left__descripcion">
+      Venta de Lotes al contado y en cuotas, reserva tu lote ya mismo con uno de nuestros asesores !!
+    </p>
+    <button class="left__button" mat-raised-button color="accent">Ver Lotes !</button>
+  </section>
+  <section class="rigth">
+    <img class="rigth__img" src="../../../../../../assets/images/public/homefoto.webp" alt="">
+  </section>
+</div>
