--- a/src/app/core/presentation/admin/components/admin-header/admin-header.component.html
+++ b/src/app/core/presentation/admin/components/admin-header/admin-header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header">
+<mat-toolbar class="header" color="primary">
   <button (click)="openSidenav()" mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
