--- a/src/app/core/presentation/admin/modules/empleado/components/empleado-tabla/empleado-tabla.component.html
+++ b/src/app/core/presentation/admin/modules/empleado/components/empleado-tabla/empleado-tabla.component.html
@@ -15,6 +15,12 @@
     <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
   </ng-container>
 
+  <!-- DNI Column -->
+  <ng-container matColumnDef="dni">
+    <th mat-header-cell *matHeaderCellDef> DNI </th>
+    <td mat-cell *matCellDef="let element"> {{element.dni}} </td>
+  </ng-container>
+
   <!-- Apellido Column -->
   <ng-container matColumnDef="apellido">
     <th mat-header-cell *matHeaderCellDef> Apellido </th>
@@ -25,6 +31,12 @@
   <ng-container matColumnDef="telefono">
     <th mat-header-cell *matHeaderCellDef> Telefono </th>
     <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
+  </ng-container>
+
+  <!-- Cargo Column -->
+  <ng-container matColumnDef="cargo">
+    <th mat-header-cell *matHeaderCellDef> Cargo </th>
+    <td mat-cell *matCellDef="let element"> {{element.cargo}} </td>
   </ng-container>
 
   <!-- Estado Column -->
