--- a/src/app/core/presentation/auth/modules/auth-login/auth-login.component.html
+++ b/src/app/core/presentation/auth/modules/auth-login/auth-login.component.html
@@ -1,24 +1,22 @@
-
 <div class="container">
-  <div class="wrapper">
-    <form action="">
-      <h1>Login</h1>
-      <div class="input-box">
-        <input type="text" placeholder="Username" required>
-        <i class='bx bxs-user'></i>
+  <mat-card class="card">
+      <div class="card__cabecera">
+        <mat-icon class="card__cabecera__logo">account_circle</mat-icon>
+        <mat-card-title class="card__cabecera__titulo">Inicie Sesión</mat-card-title>
       </div>
-      <div class="input-box">
-        <input type="password" placeholder="Password" required>
-        <i class='bx bxs-lock-alt' ></i>
-      </div>
-      <div class="remember-forgot">
-        <label><input type="checkbox">Recuerdame</label>
-        <a href="#">Olvidé mi contraseña</a>
-      </div>
-      <button type="submit" class="btn">Login</button>
-      <div class="register-link">
-        <p>Volver al inicio? <a href="#">IR AL HOME</a></p>
-      </div>
-    </form>
-  </div>
+      <div class="card__cuerpo">
+          <mat-form-field appearance="outline">
+            <mat-label>Username</mat-label>
+            <input matInput placeholder="ingrese su username">
+            <mat-icon matSuffix>how_to_reg</mat-icon>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Password</mat-label>
+            <input matInput placeholder="ingrese su password">
+            <mat-icon matSuffix>https</mat-icon>
+          </mat-form-field>
+
+        <button routerLink="/admin" mat-raised-button color="primary">Acceder</button>
+        </div>
+  </mat-card>
 </div>
