--- a/src/app/core/presentation/admin/modules/empleado/components/empleado-dialog/empleado-dialog.component.scss
+++ b/src/app/core/presentation/admin/modules/empleado/components/empleado-dialog/empleado-dialog.component.scss
@@ -30,7 +30,7 @@ h4 {
       grid-template-areas: 
         "nombre apellido telefono"
         "dni direccion direccion"
-        "email cargo fContratacion";
+        "cargo email email";
   
       &__nombre {
         grid-area: nombre;
@@ -52,9 +52,6 @@ h4 {
       }
       &__cargo {
         grid-area: cargo;
-      }
-      &__fContratacion {
-        grid-area: fContratacion;
       }
     }
 
