--- a/src/app/core/presentation/admin/modules/empleado/components/empleado-dialog/empleado-dialog.component.html
+++ b/src/app/core/presentation/admin/modules/empleado/components/empleado-dialog/empleado-dialog.component.html
@@ -1,42 +1,42 @@
 <div class="container">
   <section class="cabecera">
-    <h1 class="cabecera__titulo">Registre un Empleado</h1>
+    <h1 class="cabecera__titulo">REGISTRE UN EMPLEADO</h1>
   </section>
   <section class="cuerpo">
 
     <mat-stepper linear #stepper>
       <mat-step [stepControl]="firstFormGroup" editable="true">
-        <form class="fields" [formGroup]="firstFormGroup">
-          <ng-template matStepLabel>DATOS EMPLEADO</ng-template>
+        <form class="fields1" [formGroup]="firstFormGroup">
+          <ng-template matStepLabel>EMPLEADO</ng-template>
         
-            <mat-form-field class="fields__nombre" appearance="outline">
+            <mat-form-field class="fields1__nombre" appearance="outline">
               <mat-label>Nombre</mat-label>
               <input matInput placeholder="ingrese el nombre">
             </mat-form-field>
-            <mat-form-field class="fields__apellido" appearance="outline">
+            <mat-form-field class="fields1__apellido" appearance="outline">
               <mat-label>Apellido</mat-label>
               <input matInput placeholder="ingrese el apellido">
             </mat-form-field>
       
-            <mat-form-field class="fields__email" appearance="outline">
+            <mat-form-field class="fields1__email" appearance="outline">
               <mat-label>Email</mat-label>
               <input matInput placeholder="ingrese el email">
             </mat-form-field>
-            <mat-form-field class="fields__dni" appearance="outline">
+            <mat-form-field class="fields1__dni" appearance="outline">
               <mat-label>DNI</mat-label>
               <input matInput placeholder="ingrese el DNI">
             </mat-form-field>
       
-            <mat-form-field class="fields__telefono" appearance="outline">
+            <mat-form-field class="fields1__telefono" appearance="outline">
               <mat-label>Telefono</mat-label>
               <input matInput placeholder="ingrese su telefono">
             </mat-form-field>
-            <mat-form-field class="fields__direccion" appearance="outline">
+            <mat-form-field class="fields1__direccion" appearance="outline">
               <mat-label>Dirección</mat-label>
               <input matInput placeholder="ingrese su direccion">
             </mat-form-field>
-            <mat-form-field appearance="outline" class="fields__cargo">
-              <mat-label>Elija Cargo</mat-label>
+            <mat-form-field appearance="fill" class="fields1__cargo">
+              <mat-label>Defina Cargo</mat-label>
               <mat-select>
                 <mat-option value="option">Supervisor</mat-option>
                 <mat-option value="option">Vendedor</mat-option>
@@ -50,47 +50,48 @@
       </mat-step>
       <!--SECOND STEP-->
       <mat-step [stepControl]="secondFormGroup" editable="true">
-        <form [formGroup]="secondFormGroup">
-          <ng-template matStepLabel>DATOS CONTRATO</ng-template>
+        <form class="fields2" [formGroup]="secondFormGroup">
+          <ng-template matStepLabel>CONTRATO</ng-template>
 
-          <mat-form-field class="fInicio">
-            <mat-label>Choose a date</mat-label>
+          <mat-form-field class="fields2__fInicio">
+            <mat-label>Fecha de Inicio</mat-label>
             <input matInput [matDatepicker]="datepicker">
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
             <mat-datepicker #datepicker>
               <mat-datepicker-actions>
                 <button mat-button matDatepickerCancel>Cancel</button>
-                <button mat-raised-button color="primary" matDatepickerApply>Apply</button>
+                <button mat-raised-button color="accent" matDatepickerApply>Apply</button>
               </mat-datepicker-actions>
             </mat-datepicker>
           </mat-form-field>
 
-          <mat-form-field class="fFin">
-            <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="datepicker">
+          <mat-form-field class="fields2__fFin">
+            <mat-label>Fecha de Fin</mat-label>
+            <input matInput [matDatepicker]="datepicker2">
             <mat-hint>MM/DD/YYYY</mat-hint>
-            <mat-datepicker-toggle matIconSuffix [for]="datepicker"></mat-datepicker-toggle>
-            <mat-datepicker #datepicker>
+            <mat-datepicker-toggle matIconSuffix [for]="datepicker2"></mat-datepicker-toggle>
+            <mat-datepicker #datepicker2>
               <mat-datepicker-actions>
                 <button mat-button matDatepickerCancel>Cancel</button>
-                <button mat-raised-button color="primary" matDatepickerApply>Apply</button>
+                <button mat-raised-button color="accent" matDatepickerApply>Apply</button>
               </mat-datepicker-actions>
             </mat-datepicker>
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="fields2__tipoContrato">
+            <mat-label>Tipo Contrato</mat-label>
+            <mat-select>
+              <mat-option value="option">Hola Mundo</mat-option>
+              <mat-option value="option">Siuuuuu</mat-option>
+              <mat-option value="option">El goattt</mat-option>
+            </mat-select>
           </mat-form-field>
 
         </form>
-        <div>
-          <button mat-raised-button color="warn" matStepperPrevious>Atras</button>
-          <button mat-raised-button color="accent" matStepperNext>Siguiente</button>
-        </div>
-      </mat-step>
-      <mat-step>
-        <ng-template matStepLabel>Done</ng-template>
-        <p>You are now done.</p>
-        <div>
-          <button mat-raised-button color="warn" matStepperPrevious>Atras</button>
-          <button mat-raised-button color="primary">Guardar</button>
+        <div class="cuerpo__buttons">
+          <button mat-raised-button color="accent" matStepperPrevious>Atras</button>
+          <button mat-raised-button color="primary" matStepperNext>Guardar</button>
         </div>
       </mat-step>
     </mat-stepper>
