--- a/src/app/core/presentation/admin/components/admin-header/admin-header.component.html
+++ b/src/app/core/presentation/admin/components/admin-header/admin-header.component.html
@@ -4,10 +4,15 @@
   </button>
   <span>Admin Panel</span>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
+
+  <button mat-icon-button [matMenuTriggerFor]="beforeMenu" class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon>account_circle</mat-icon>
   </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
-  </button>
+  <mat-menu #beforeMenu="matMenu" xPosition="before">
+    <button mat-menu-item (click)="cerrarSesion()">
+      <mat-icon>exit_to_app</mat-icon>
+      Cerrar Sesión
+    </button>
+  </mat-menu>
+
 </mat-toolbar>
