--- a/src/app/core/presentation/admin/modules/usuario/components/usuario-dialog/usuario-dialog.component.scss
+++ b/src/app/core/presentation/admin/modules/usuario/components/usuario-dialog/usuario-dialog.component.scss
@@ -7,6 +7,14 @@
   gap: 10px;
   padding: 20px 25px;
 
+  .cabecera {
+    &__titulo {
+      color: #673ab7;
+      font-size: 24px;
+      font-weight: 500;
+    }
+  }
+
   .cuerpo {
     width: 90%;
     .fields {
