--- a/src/app/core/presentation/admin/modules/usuario/components/usuario-tabla/usuario-tabla.component.html
+++ b/src/app/core/presentation/admin/modules/usuario/components/usuario-tabla/usuario-tabla.component.html
@@ -6,7 +6,7 @@
   <!-- Id Column -->
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> ID. </th>
-    <td mat-cell *matCellDef="let element"> {{element.idEmpleado}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.idUsuario}} </td>
   </ng-container>
 
   <!-- Username Column -->
