--- a/src/app/core/presentation/admin/modules/ventas/components/venta-tabla/venta-tabla.component.html
+++ b/src/app/core/presentation/admin/modules/ventas/components/venta-tabla/venta-tabla.component.html
@@ -6,44 +6,42 @@
   <!-- Id Column -->
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> ID. </th>
-    <td mat-cell *matCellDef="let element"> {{element.idCliente}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.idVenta}} </td>
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="nombre">
-    <th mat-header-cell *matHeaderCellDef> Nombre </th>
-    <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+  <ng-container matColumnDef="vendedor">
+    <th mat-header-cell *matHeaderCellDef> COD-Vendedor </th>
+    <td mat-cell *matCellDef="let element"> {{element.usuario.username}} </td>
   </ng-container>
 
   <!-- Apellido Column -->
-  <ng-container matColumnDef="apellido">
-    <th mat-header-cell *matHeaderCellDef> Apellido </th>
-    <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
+  <ng-container matColumnDef="cliente">
+    <th mat-header-cell *matHeaderCellDef> DNI-Cliente </th>
+    <td mat-cell *matCellDef="let element"> {{element.cliente.dni}} </td>
+  </ng-container>
+
+  <!-- Apellido Column -->
+  <ng-container matColumnDef="telefono">
+    <th mat-header-cell *matHeaderCellDef> Telefono </th>
+    <td mat-cell *matCellDef="let element"> {{element.cliente.telefono}} </td>
   </ng-container>
 
   <!-- DNI Column -->
-  <ng-container matColumnDef="dni">
-    <th mat-header-cell *matHeaderCellDef> DNI </th>
-    <td mat-cell *matCellDef="let element"> {{element.dni}} </td>
+  <ng-container matColumnDef="manzana">
+    <th mat-header-cell *matHeaderCellDef> Manzana </th>
+    <td mat-cell *matCellDef="let element"> {{element.lote.manzana}} </td>
   </ng-container>
 
-  <!-- Telefono Column -->
-  <ng-container matColumnDef="telefono">
-    <th mat-header-cell *matHeaderCellDef> Telefono </th>
-    <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
+  <!-- DNI Column -->
+  <ng-container matColumnDef="precio">
+    <th mat-header-cell *matHeaderCellDef> Precio </th>
+    <td mat-cell *matCellDef="let element"> S/. {{element.lote.precio}} </td>
   </ng-container>
 
-  <!-- Estado Column -->
-  <ng-container matColumnDef="estado">
-    <th mat-header-cell *matHeaderCellDef> Estado </th>
-    <td mat-cell *matCellDef="let element"> 
-      <span [ngClass]="{'estado': true,'estado-activo' : element.estado, 'estado-inactivo' : !element.estado}">@if (element.estado) {
-        Activo
-      }@else {
-        Inactivo
-      }
-      </span>
-    </td>
+  <ng-container matColumnDef="tipoPago">
+    <th mat-header-cell *matHeaderCellDef> Tipo de Pago </th>
+    <td mat-cell *matCellDef="let element">{{element.tipoLote.tipoPago}} </td>
   </ng-container>
 
   <!-- Weight Column -->
@@ -53,9 +51,6 @@
       <div class="acciones__botones">
         <button mat-icon-button color="accent" (click)="editItemHandler(element)">
           <mat-icon>edit</mat-icon>
-        </button>
-        <button mat-icon-button color="warn" (click)="deleteItemHandler(element)">
-          <mat-icon>delete</mat-icon>
         </button>
       </div> 
     </td>
