--- a/src/app/core/presentation/admin/modules/ventas/ventas.component.html
+++ b/src/app/core/presentation/admin/modules/ventas/ventas.component.html
@@ -5,10 +5,10 @@
     }
   </div>
   <section class="cabecera">
-    <h1 class="cabecera__titulo">Gestion de Clientes:</h1>
+    <h1 class="cabecera__titulo">Gestion de Ventas:</h1>
   </section>
   <section class="busqueda">
-    <span>Busque un cliente:</span>
+    <span>Busque una venta:</span>
     <mat-form-field class="busqueda__input">
       <mat-label>Filtrar</mat-label>
       <input matInput placeholder="Ex. ium" #input>
@@ -23,7 +23,7 @@
     </button>
   </section>
   <section class="tabla">
-    <app-cliente-tabla [clientes]="clientes()" (editItem)="editItemHandler($event)" 
-    (deleteItem)="deleteItemHandler($event)" />
+    <app-venta-tabla [ventas]="ventas()" (editItem)="editItemHandler($event)" 
+    />
   </section>
 </div>
